# rust-rocket-microservices

./: .dockerignore  docker-compose.yaml  readme.md
email-microservice/: Cargo.toml
master-server/: .env  Cargo.toml  Dockerfile  Rocket.toml
master-server/migrations/: 20230509140741_user.down.sql  20230509140741_user.up.sql  20230509140945_post.up.sql
master-server/src/: consumer.rs  lib.rs  main.rs
master-server/src/errors/: mod.rs
master-server/src/fairings/: db.rs
master-server/src/guards/: jwt_header.rs  mod.rs
master-server/src/jwt/: token.rs
master-server/src/models/: bool_wrapper.rs  mod.rs  our_date_time.rs  pagination.rs  post.rs  tags.rs  user.rs  user_status.rs
master-server/src/routes/: blog.rs  user.rs
master-server/src/states/: mod.rs
save-to-postgres/: Cargo.toml
translation-microservice/: Cargo.toml
translation-microservice/src/: main.rs
