[package]
name = "master-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9"
rdkafka = "0.29.0"
tokio = {version= "1.27.0", features = ["fs", "rt"]}
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand_core = {version = "0.6", features = ["std"]}
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "all-types"] }
time = {version = "0.3", features = ["std"]}
uuid = { version = "1.3.0", features = ["serde", "v4"] }
rocket =  {version = "0.5.0-rc.3", features = ["uuid", "secrets", "json"]}
argon2 = {version = "0.5.0", features = ["std"]}
base64 = {version = "0.21.0"}
chrono = {version = "0.4", features = ["serde"]}
flume = "0.10.10"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4"
zxcvbn = "2"
tokio-postgres = "0.7.8"
rocket_contrib = {version = "0.4.11", features = ["uuid", "json"]}
jwt-simple = "0.11.4"
sha2 = "0.10.2"
regex = "1.5.4"
figment = { version = "0.10", features = ["toml", "env"] }

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]
